--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Meme Generator</title>
-        <link rel="stylesheet" href="/styles/styles.css" />
+        <link rel="stylesheet" href="styles/styles.css" />
         <script
             src="https://kit.fontawesome.com/4597a722f2.js"
             crossorigin="anonymous"
