--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body onload="onInit()" class="main-layout">
         <header class="header flex">
-            <img class="logo" src="/meme-imgs/LOGO.png" />
+            <img class="logo" src="meme-imgs/LOGO.png" />
             <nav class="menu">
                 <button class="menu-button" onclick="openGallery()">
                     Gallery
